--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,9 +11,79 @@
     <link rel="stylesheet" href="/assets/semantic/semantic.min.css">
 
     <style>
+        .menu {
+            background-color: #000000;
+            display: flex;
+            padding: 10px;
+        }
+
+        .menu a {
+            text-decoration: none;
+            color: #fff;
+            padding: 5px 20px;
+            background-color: #3e3e3e;
+        }
+
+        .menu a:hover {
+            background-color: #7a7a7a;
+        }
+        
+        .item {
+            margin: 0 10px;
+        }
 
         .main.container{
-            margin-top: 7em;
+            margin-top : 10em;
+        }
+
+        h1{
+            text-align: center;
+        }
+
+        .form{
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            box-sizing: border-box;
+            margin-top: 30px;
+
+            background-color: #d7d6d6;
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 16px;
+            box-sizing: border-box;
+        }
+
+        .button{
+            width: 100%;
+            padding: 10px;
+            background-color: rgb(81, 76, 175);
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .button:hover {
+            background-color: #45a049;
+        }
+
+        .flash{
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .negative{
+            color: rgb(243, 44, 44);
+        }
+        
+        .positive{
+            color: rgb(5, 132, 10);
         }
 
     </style>
@@ -22,7 +92,7 @@
 
 <body>
 
-<div class="ui fixed inverted menu">
+<div class="menu">
 
     <a href = "/" class = "header item" > Killer </a>
     <a href= "/auth/login" class="header item"> Connection </a>
@@ -37,49 +107,39 @@
 <!-- ----------------------------------------------------------------------- -->
 <!--                              Message flash                              -->
 <!-- ----------------------------------------------------------------------- -->
+<div class = "flash">
+    <% if(locals.flash && locals.flash.error){ %>
 
-<% if(locals.flash && locals.flash.error){ %>
+        <div type="text" class="negative">
+            <%= flash.error %>
+        </div>
 
-    <div class="ui negative message">
+    <% } %>
 
-        <%= flash.error %>
+    <% if(locals.flash && locals.flash.success){ %>
 
-    </div>
-
-<% } %>
-
-<% if(locals.flash && locals.flash.success){ %>
-
-    <div class="ui positive message">
-    
-        <%= flash.success %>
-    
-    </div>
-    
-<% } %>
-
+        <div class="positive">
+            <%= flash.success %>
+        </div>
+        
+    <% } %>
+</div>
 <!-- ----------------------------------------------------------------------- -->
 <!--                                login                                    -->
 <!-- ----------------------------------------------------------------------- -->
 
 
-<form action="/auth/login" method="post" class="ui form">
+<form action="/auth/login" method="post" class="form">
 
-    <div class="field">
-        <label for="loginPlayer"> Username </label>
-        <textarea name="loginPlayer" id="name" style="height: 0px; width: 200px;"></textarea>
+    <div class="name">
+        <input type="text" name="loginPlayer" placeholder = "Username"></input>
     </div>
 
-    <div class="field">
-        <label for="loginPlayer"> Password </label>
-        <textarea name="loginPlayer" id="pwd" style="height: 0px; width: 200px;"></textarea>
+    <div class="pwd">
+        <input name="loginPlayer" placeholder = "Password"></input>
     </div>
     
-    <button type="submit" class="ui blue labeled submit icon button">
-
-        <i class="icon edit"></i>Envoyer
-
-    </button>
+    <button type="submit" class="button">Envoyer</button>
 
 </form>
 
