--- a/views/game/create.ejs
+++ b/views/game/create.ejs
@@ -29,6 +29,8 @@
     <a href= "/friend" class="header item"> Friend </a>
     <a href= "/game/create" class="header item"> Create Game </a>
     <a href= "/game/load" class="header item"> Load Game </a>
+    <a href= "/game/historique" class="header item"> Historique</a>
+
 
 </div>
 
