--- a/views/game/load.ejs
+++ b/views/game/load.ejs
@@ -8,16 +8,18 @@
 
     <title> AshGames_Killer </title>
 
-    <link rel="stylesheet" href="/assets/semantic/semantic.min.css">
-
     <style>
-
         .main.container{
-            margin-top: 7em;
+            margin-top: 5em;
+            margin-left: 7em;
+        }
+        
+        h1{
+            color : red;
         }
 
+
     </style>
-    
 </head>
 
 <body>
@@ -29,7 +31,7 @@
     <a href= "/friend" class="header item"> Friend </a>
     <a href= "/game/create" class="header item"> Create Game </a>
     <a href= "/game/load" class="header item"> Load Game </a>
-    
+    <a href= "/game/historique" class="header item"> Historique</a>
 
 </div>
 
@@ -42,23 +44,15 @@
 <!-- ----------------------------------------------------------------------- -->
 
 <% if(locals.flash && locals.flash.error){ %>
-
     <div class="ui negative message">
-
         <%= flash.error %>
-
     </div>
-
 <% } %>
 
 <% if(locals.flash && locals.flash.success){ %>
-
     <div class="ui positive message">
-    
-        <%= flash.success %>
-    
+            <%= flash.success %>
     </div>
-    
 <% } %>
 
 <!-- ----------------------------------------------------------------------- -->
