--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -4,23 +4,33 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-
-    <link rel="stylesheet" type="text/css" href="/assets/test.css" />
-
-    <title> AshGames_Killer </title>
+    <head>
+  
+        <link rel="stylesheet" type="text/css" href="/assets/semantic/semantic.min.css" />
+        <title> AshGames_Killer </title>
     
-</head>
-
-<body>
-
-<div class="menu">
-
-    <a href = "/" class = "header item" > Killer </a>
-    <a href= "/auth/login" class="header item"> Connection </a>
-    <a href= "/auth/register" class="header item"> Nouveau profil </a>
+    </head>
     
-</div>
+    <body>
+    
+    <div class="menu">
+    
+      <div class="ui pointing menu">
+        <a href = "/" class="item">
+          Killer
+        </a>
+    
+        <a href= "/auth/login" class="item">
+          Login
+        </a>
+        
+        <a href= "/auth/register" class="active item">
+            Register
+        </a>
+      </div>
+      
+      <p></p>
+    </div>
 
 <div class="ui main container">
 
