--- a/views/game/endScreen.ejs
+++ b/views/game/endScreen.ejs
@@ -4,35 +4,30 @@
 
 <!DOCTYPE html>
 <html>
-<head>
+    <head>
 
-    <title> AshGames_Killer </title>
-
-    <link rel="stylesheet" href="/assets/semantic/semantic.min.css">
-
-    <style>
-
-        .main.container{
-            margin-top: 7em;
-        }
-
-    </style>
+        <title> AshGames_Killer </title>
+        <link rel="stylesheet" href="/assets/semantic/semantic.min.css">
+        
+    </head>
     
-</head>
+    <body>
+    
+        <div class="menu">
+    
+            <div class="ui pointing menu">
+                <a href = "/" class="item"> Killer </a>
+                <a href= "/friend" class="item"> Friend </a>
+                <a href= "/game/create" class="item"> Create Game </a>
+                <a href= "/game/load" class="item"> Load Game </a>
+                <a class="active item"> <%= game.name %> </a>
+                <a href= "/game/historique" class="item"> Historique</a>
 
-<body>
-
-<div class="ui fixed inverted menu">
-
-    <a href = "/" class = "header item" > Killer </a>
-    <a href= "/auth/disconnect" class="header item"> Disconnect </a>
-    <a href= "/friend" class="header item"> Friend </a>
-    <a href= "/game/create" class="header item"> Create Game </a>
-    <a href= "/game/load" class="header item"> Load Game </a>
-    <a href= "/game/historique" class="header item"> Historique</a>
-
-
-</div>
+                <a href= "../auth/disconnect" class="right item"> Disconnect </a>
+            </div>
+              
+            <p></p>
+        </div>
 
 <div class="ui main container">
 
