--- a/views/game/load.ejs
+++ b/views/game/load.ejs
@@ -4,36 +4,29 @@
 
 <!DOCTYPE html>
 <html>
-<head>
+    <head>
 
-    <title> AshGames_Killer </title>
-
-    <style>
-        .main.container{
-            margin-top: 5em;
-            margin-left: 7em;
-        }
+        <title> AshGames_Killer </title>
+        <link rel="stylesheet" href="/assets/semantic/semantic.min.css">
         
-        h1{
-            color : red;
-        }
+    </head>
+    
+    <body>
+    
+        <div class="menu">
+    
+            <div class="ui pointing menu">
+                <a href = "/" class="item"> Killer </a>
+                <a href= "/friend" class="item"> Friend </a>
+                <a href= "/game/create" class="item"> Create Game </a>
+                <a href= "/game/load" class="active item"> Load Game </a>
+                <a href= "/game/historique" class="item"> Historique</a>
 
-
-    </style>
-</head>
-
-<body>
-
-<div class="ui fixed inverted menu">
-
-    <a href = "/" class = "header item" > Killer </a>
-    <a href= "/auth/disconnect" class="header item"> Disconnect </a>
-    <a href= "/friend" class="header item"> Friend </a>
-    <a href= "/game/create" class="header item"> Create Game </a>
-    <a href= "/game/load" class="header item"> Load Game </a>
-    <a href= "/game/historique" class="header item"> Historique</a>
-
-</div>
+                <a href= "../auth/disconnect" class="right item"> Disconnect </a>
+            </div>
+              
+            <p></p>
+        </div>
 
 <div class="ui main container">
 
