--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-  
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="/assets/semantic/semantic.min.css" />
         <title> AshGames_Killer </title>
     
@@ -20,12 +20,8 @@
           Killer
         </a>
     
-        <a href= "/auth/login" class="item">
+        <a href= "/auth/login" class="active item">
           Login
-        </a>
-        
-        <a href= "/auth/register" class="active item">
-            Register
         </a>
       </div>
       
