--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/assets/semantic/semantic.min.css" />
     <title> AshGames_Killer </title>
 
@@ -17,11 +17,11 @@
 
   <div class="ui pointing menu">
     <a href = "/" class="item">
-      Killer
+      H
     </a>
 
     <a href= "/auth/login" class="active item">
-      Login
+      L
     </a>
 
   </div>
