--- a/views/game/historique.ejs
+++ b/views/game/historique.ejs
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> AshGames_Killer </title>
         <link rel="stylesheet" href="/assets/semantic/semantic.min.css">
         
