--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/assets/semantic/semantic.min.css" />
     <title> AshGames_Killer </title>
     
