--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -2,57 +2,12 @@
 <!--                                 header                                  -->
 <!-- ----------------------------------------------------------------------- -->
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/assets/semantic/semantic.min.css" />
-    <title> AshGames_Killer </title>
 
-</head>
-
-<body>
-
-<div class="menu">
-
-  <div class="ui pointing menu">
-    <a href = "/" class="item">
-      H
-    </a>
-
-    <a href= "/auth/login" class="active item">
-      L
-    </a>
-
-  </div>
-  
-  <p></p>
-</div>
-
-<div class="ui main container">
+<%- include('../header.ejs') %>
 
 <h1> Login </h1>
 
-<!-- ----------------------------------------------------------------------- -->
-<!--                              Message flash                              -->
-<!-- ----------------------------------------------------------------------- -->
-<div class = "flash">
-    <% if(locals.flash && locals.flash.error){ %>
-
-        <div type="text" class="negative">
-            <%= flash.error %>
-        </div>
-
-    <% } %>
-
-    <% if(locals.flash && locals.flash.success){ %>
-
-        <div class="positive">
-            <%= flash.success %>
-        </div>
-        
-    <% } %>
-</div>
+<%- include('../flash.ejs') %>
 
 <form action="/auth/login" method="post" class="form">
 
@@ -96,5 +51,15 @@
   </div>
 
 </form>
+
+
+<div class="bottom-menu">
+    
+  <div class="ui menu">
+      <a href = "/" class="item">  Killer </a>
+      <a href= "/auth/login" class="active item"> <img src="/assets/picture/connexion.png"/></a>
+    </div>
+  <p></p>
+</div>
 
 <% include ('../footer.ejs') %>
