--- a/views/friend.ejs
+++ b/views/friend.ejs
@@ -2,88 +2,37 @@
 <!--                                 header                                  -->
 <!-- ----------------------------------------------------------------------- -->
 
-<!DOCTYPE html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> AshGames_Killer </title>
-        <link rel="stylesheet" href="/assets/semantic/semantic.min.css">
+<%- include('./header.ejs') %>
+
+    <style>
+        .image-container {
+            width: 33%; /* L'image s'adapte à la largeur de la carte */
+            overflow: hidden; /* Cache les parties dépassantes de l'image */
+        }
         
-        <style>
-            
-            .image-container {
-                width: 33%; /* L'image s'adapte à la largeur de la carte */
-                overflow: hidden; /* Cache les parties dépassantes de l'image */
-            }
-            
-            .image-container img {
-                width: 95%; /* L'image remplit la largeur du conteneur */
-                height: 95%; /* Remplit la hauteur du conteneur */
-                object-fit: cover; /* Recadre l'image pour qu'elle remplisse l'espace sans déformation */
-            }
+        .image-container img {
+            width: 95%; /* L'image remplit la largeur du conteneur */
+            height: 95%; /* Remplit la hauteur du conteneur */
+            object-fit: cover; /* Recadre l'image pour qu'elle remplisse l'espace sans déformation */
+        }
 
-            .bottom-menu {
-                position: sticky;
-                bottom: 0;
-                left: 0;
-                width: 100%;
-                background-color: #ffffff;
-                display: flex;
-                justify-content: space-around;
-            }
-            
-            .ui.menu {
-                display: flex; /* Utilise flexbox pour l'alignement */
-                justify-content: space-around; /* Répartit les éléments uniformément */
-            }
-            
-            .ui.cards {
-                display: flex; /* Utilise Flexbox pour aligner les cartes */
-                flex-wrap: wrap; /* Permet aux cartes de passer à la ligne si nécessaire */
-            }
-            
-            .card {
-                width: 200%; /* Deux cartes par ligne avec un espace */
-                margin: 15px; /* Marge autour de chaque carte */
-                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Ombre pour les cartes */
-                border-radius: 5px; /* Coins arrondis */
-                overflow: hidden; /* Évite le débordement de contenu */
-            }
-
-        </style>
-
-
-    </head>
-    <body>
-    
+        .ui.cards {
+            display: flex; /* Utilise Flexbox pour aligner les cartes */
+            flex-wrap: wrap; /* Permet aux cartes de passer à la ligne si nécessaire */
+        }
         
-
-<div class="ui main container">
+        .card {
+            width: 200%; /* Deux cartes par ligne avec un espace */
+            margin: 15px; /* Marge autour de chaque carte */
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Ombre pour les cartes */
+            border-radius: 5px; /* Coins arrondis */
+            overflow: hidden; /* Évite le débordement de contenu */
+        }
+    </style>
 
 <h1> Friends </h1>
 
-<!-- ----------------------------------------------------------------------- -->
-<!--                              Message flash                              -->
-<!-- ----------------------------------------------------------------------- -->
-
-<% if(locals.flash && locals.flash.error){ %>
-
-    <div class="ui negative message">
-
-        <%= flash.error %>
-
-    </div>
-
-<% } %>
-
-<% if(locals.flash && locals.flash.success){ %>
-
-    <div class="ui positive message">
-    
-        <%= flash.success %>
-    
-    </div>
-    
-<% } %>
+<%- include('./flash.ejs') %>
 
 <!-- ----------------------------------------------------------------------- -->
 <!--                                Init                                     -->
@@ -149,21 +98,8 @@ Your friends :
             </div>
         </div>
     <% } %>
+</div>
 
+<%- include ('./menu.ejs') %>
 
-
-    <div class="bottom-menu">
-    
-        <div class="ui menu">
-            <a href = "/" class="item">  Killer </a>
-            <a href= "/friend" class="active item"> <img src="/assets/picture/addFriends.png"/> </a>
-            <a href= "/game/create" class="item"> <img src="/assets/picture/new.png"/> </a>
-            <a href= "/game/load" class="item"> <img src="/assets/picture/knife.png"/> </a>
-            <a href= "/game/historique" class="item"> <img src="/assets/picture/historique.png"/> </a>
-            <a href= "/auth/disconnect" class="item"> <img src="/assets/picture/disconnect.png"/> </a>
-        </div>
-          
-        <p></p>
-    </div>
-
-<% include ('footer') %>
+<%- include ('./footer.ejs') %>
