--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,39 +2,22 @@
 <!--                                 header                                  -->
 <!-- ----------------------------------------------------------------------- -->
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/assets/semantic/semantic.min.css" />
-    <title> AshGames_Killer </title>
-    
-</head>
-
-<body>
-
-<div class="menu">
-
-    <div class="ui pointing menu">
-        <a href = "/" class="active item"> Killer </a>
-
-        <% if(data.user == undefined || data.user == ''){ %>
-            <a href= "/auth/login" class="item"> Login</a>
-        <%} else { %>
-            <a href= "/friend" class="item"> Friend </a>
-            <a href= "/game/create" class="item"> Create Game </a>
-            <a href= "/game/load" class="item"> Load Game </a>
-            <a href= "/game/historique" class="item"> Historique</a>
-            
-            <a href= "/auth/disconnect" class="right item"> Disconnect </a>
-        <%}%>
-    </div>
-      
-    <p></p>
-</div>
-
-<div class="ui main container"></div>
+<%- include('./header.ejs') %>
 
 <h1>  Home Page </h1>
 
-<% include ('footer') %>
+<%- include ('./flash.ejs') %>
+
+<% if(data.user == undefined || data.user == ''){ %>
+    <div class="bottom-menu"></div>
+        <div class="ui menu">
+            <a href = "/" class="item">  Killer </a>
+            <a href= "/auth/login" class="item"> <img src="/assets/picture/connexion.png"/> </a>
+        </div> 
+        <p></p>
+    </div>
+<%} else { %>
+    <%- include('./menu.ejs') %>
+<%}%>
+
+<%- include('./footer.ejs') %>
