--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,3 +1,6 @@
+
+<div class="invisible-zone"></div>
+
 <div class="bottom-menu">
     
     <div class="ui menu">
@@ -8,6 +11,4 @@
         <a href= "/game/historique" class="item"> <img src="/assets/picture/historique.png"/> </a>
         <a href= "/auth/disconnect" class="item"> <img src="/assets/picture/disconnect.png"/> </a>
     </div>
-      
-    <p></p>
 </div>
