--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/assets/semantic/semantic.min.css" />
     <link rel="stylesheet" href="/assets/menu.css">
+    <link rel="stylesheet" href="/assets/card.css">
+    <link rel="stylesheet" href="/assets/page.css">
+
     <title> AshGames_Killer </title>
 
 </head>
