fix menu error disconnect

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -27,13 +27,6 @@
 
     </form>
 
-    <div class="bottom-menu">
-    
-        <div class="ui menu">
-            <a href = "/" class="item">  Killer </a>
-            <a href= "/auth/login" class="active item"> <img src="/assets/picture/connexion.png"/></a>
-          </div>
-        <p></p>
-    </div>
+    <%- include('../menu_off.ejs') %>
       
-    <% include ('../footer.ejs') %>
+    <%- include ('../footer.ejs') %>
