--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,7 @@
 <%- include ('./flash.ejs') %>
 
 <% if(data.user == undefined || data.user == ''){ %>
-    <div class="bottom-menu"></div>
-        <div class="ui menu">
-            <a href = "/" class="item">  Killer </a>
-            <a href= "/auth/login" class="item"> <img src="/assets/picture/connexion.png"/> </a>
-        </div> 
-    </div>
+    <%- include('./menu_off.ejs') %>
 <%} else { %>
     <%- include('./menu.ejs') %>
 <%}%>
