--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -14,17 +14,46 @@
 
 
     <form action="/auth/register" method="post" class="form">
+        <div class="ui placeholder segment">
+            <div class="ui form">
 
-        <div class="name">
-            <input type="text" name="paramPlayer" id="name" placeholder = "Username"></input>
-        </div>
+                <div class="middle aligned column">
+                    <div class="ui big button">
+                      <i class="signup icon"></i>
+                      <a href= "/auth/login"> Login </a>
+                    </div>
+                </div>
 
-        <div class="pwd">
-            <input type="password" name="paramPlayer" id="pwd" placeholder = "Password"></input>
-        </div>
+                <div class="ui horizontal divider">
+                    Or
+                </div>
+
+                <div class="field">
+                    <label>Username</label>
+                    <div class="ui left icon input">
+                        <i class="user icon"></i>
+                        <input type="text" 
+                        name="paramPlayer"
+                        id = "name"
+                        placeholder = "Username">
+                    </div>
+                </div>
+
+                <div class="field">
+                    <label>Password</label>
+                    <div class="ui left icon input">
+                      <i class="lock icon"></i>
+                      <input type="password" 
+                      name="paramPlayer" 
+                      id="pwd"
+                      placeholder = "Password">
+                    </div>
+                </div>
+            
+                <button type="submit" class="ui blue submit button">Envoyer</button>
         
-        <button type="submit" class="button">Envoyer</button>
-
+            </div>
+        </div>
     </form>
 
     <%- include('../menu_off.ejs') %>
