--- a/views/menu_off.ejs
+++ b/views/menu_off.ejs
@@ -4,7 +4,7 @@
     
     <div class="ui menu">
         <a href = "/" class="item">  Killer </a>
-        <a href= "/auth/login" class="active item"> <img src="/assets/picture/connexion.png"/></a>
+        <a href= "/auth/login" class="item"> <img src="/assets/picture/connexion.png"/></a>
       </div>
     <p></p>
 </div>
